<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:background="@color/white"
    android:paddingRight="10dp"
    tools:context=".screens.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/registerprogbar"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="#000"
        android:textSize="32sp"
        android:fontFamily="@font/mulishmedium" />

        <TextView

            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/firstnameregister"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/spinner_drawable"
            android:hint="@string/first_name"
            android:imeOptions="actionDone"
            android:paddingStart="15dp" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/emailregister"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/spinner_drawable"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:paddingLeft="15dp"
            android:paddingStart="15dp" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/passwordregister"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/spinner_drawable"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="15dp" />


        <TextView
            android:id="@+id/registeruser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_drawable"
            android:gravity="center"
            android:enabled="true"
            android:textColor="@color/white"
            android:fontFamily="@font/mulishbold"
            android:textSize="16sp"/>
    </LinearLayout>
    </RelativeLayout>

</ScrollView>