<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ipl.user.screens.ProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="20dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/profile"
                android:textSize="20sp"
                android:fontFamily="@font/mulishbold"
                android:lineSpacingExtra="0sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

            <ImageView
                android:id="@+id/prof_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings"
                app:tint="#333333" />
            <ImageView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/logout"
                app:tint="#333333" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/lightgrey"/>

        </RelativeLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/over_view"
            android:textColor="#000"
            android:layout_marginTop="30dp"
            android:paddingBottom="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/mulishbold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulishlight"
                    android:text="@string/points"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/prof_points_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulishbold"
                    android:text="0"
                    android:textColor="#000"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulishlight"
                    android:text="@string/games"

                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/prof_games_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulishbold"
                    android:text="0"

                    android:textColor="#000"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulishlight"
                    android:text="@string/rank"

                    android:textColor="#000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/prof_rank_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulishbold"
                    android:text="0"
                    android:textColor="#000"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/prof_progress_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulishlight"
            android:paddingTop="20dp"
            android:text="Games"
            android:textColor="#000"
            android:textSize="16sp" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressbartimeleft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="8dp"
            android:progress="60"
            android:max="100"
            android:gravity="center_vertical"
            android:secondaryProgress="60"
            style="?android:attr/progressBarStyleHorizontal" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_games_recyc"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>




</LinearLayout>
</ScrollView>

<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            app:strokeWidth="1dp"-->
<!--            app:strokeColor="@color/lightgrey"-->
<!--            app:cardCornerRadius="5dp">-->
<!--            <com.google.android.material.tabs.TabLayout-->
<!--                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"-->
<!--                android:id="@+id/tab_layout"-->
<!--                app:tabIndicatorGravity="stretch"-->
<!--                app:tabMaxWidth="0dp"-->
<!--                app:tabGravity="fill"-->
<!--                app:tabIndicatorColor="@color/blueprimary"-->
<!--                app:tabSelectedTextColor="@android:color/white"-->
<!--                app:tabTextColor="@color/black"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="35dp"/>-->
<!--        </com.google.android.material.card.MaterialCardView>-->


<!--        <androidx.viewpager.widget.ViewPager-->
<!--            android:id="@+id/viewPager"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

<!--        </LinearLayout>-->
    </LinearLayout>
</FrameLayout>