<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ipl.user.screens.StatisticsFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/mulishbold"
                    android:textSize="20sp"
                    android:text="@string/recent_stats"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/blueprimary"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/mulishmedium"
                    android:layout_alignParentRight="true"
                    android:text="@string/see_more"/>



            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/lightgrey"
                app:cardCornerRadius="5dp">
                <com.google.android.material.tabs.TabLayout
                    app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                    android:id="@+id/tab_layout_week1"
                    app:tabIndicatorGravity="stretch"
                    app:tabMaxWidth="0dp"
                    app:tabGravity="fill"
                    app:tabIndicatorColor="@color/blueprimary"
                    app:tabSelectedTextColor="@android:color/white"
                    app:tabTextColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"/>
            </com.google.android.material.card.MaterialCardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/mulishlight"
                        android:text="@string/total"/>
                    <TextView
                        android:id="@+id/total_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:fontFamily="@font/mulishbold"
                        android:textSize="20sp"
                        android:text="45"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/selectedate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/mulishmedium"
                    android:layout_alignParentRight="true"
                    android:text="May23 - May29"/>



            </RelativeLayout>


               <com.github.mikephil.charting.charts.BarChart
                   android:layout_marginTop="20dp"
                   android:id="@+id/barchart"
                   android:layout_width="match_parent"
                   android:layout_height="250dp"/>


        </LinearLayout>

</ScrollView>
</FrameLayout>